--- a/dev/mainCss.css
+++ b/dev/mainCss.css
@@ -1,11 +1,129 @@
-/* @import './css/mainMenu.css'; */
-
-body{
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
+body {
     width: 100vw;
     height: 100vh;
     background-image: url(/backGround.png);
     background-position: center;
     background-size: cover;
     overflow: hidden;
+    margin: 0;
+    padding: 0;
+    display: grid;
+    font-family: 'Roboto', sans-serif;
+    color: rgba(255, 255, 255, 0.8);
+    font-weight: 700;
+}
 
+.resultContainer {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.enemySignContainer {
+    grid-column: 2/3;
+    grid-row: 4/5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#enemySign {
+    border-radius: 50%;
+    border: 4px solid rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.1);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.optionsContainer {
+    grid-column: 2/3;
+    grid-row: 6/7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.optionButton {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 4px solid rgba(255, 255, 255, 0.3);
+    border-radius: 50%;
+}
+
+.optionButton:hover{
+    background-color: rgba(255, 255, 255, 0.3);
+    border: 4px solid rgba(255, 255, 255, 0.5);
+    cursor: pointer;
+}
+
+#rock {
+    background-image: url(/icons/Rock.svg);
+    margin-right: 25px;
+}
+
+#paper {
+    background-image: url(/icons/Paper.svg);
+    margin-right: 25px;
+}
+
+#scissors {
+    background-image: url(/icons/Shears.svg);
+}
+
+#reset {
+    grid-column: 2/3;
+    grid-row: 8/9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.reset-text{
+    width: 200px;
+    height: 50px;
+    color: rgba(255,255,255,0.4);
+    text-align: center;
+}
+.reset-text:hover{
+    color: rgba(255,255,255,0.8);
+    cursor: pointer;
+}
+
+@media all and (max-width:768px) {
+    body {
+        grid-template-rows: 1fr 2fr 1fr 2fr 1fr 2fr 2fr 2fr 4fr;
+        grid-template-columns: 1fr 8fr 1fr;
+    }
+    .optionButton {
+        width: 80px;
+        height: 80px;
+        background-size: 60px 60px;
+    }
+    #enemySign{
+        width: 80px;
+        height: 80px;
+        background-size: 60px 60px;
+    }
+}
+
+@media all and (min-width: 769px) {
+    body {
+        grid-template-rows: 5fr 4fr 1fr 4fr 1fr 4fr 2fr 4fr 8fr;
+        grid-template-columns: 3fr 6fr 3fr;
+        font-size: 25px;
+    }
+    .optionButton {
+        width: 100px;
+        height: 100px;
+        background-size: 70px 70px;
+    }
+    #enemySign{
+        width: 100px;
+        height: 100px;
+        background-size: 70px 70px;
+    }
 }
